# appeals-backend

./: .gitignore  dockerfile  pyproject.toml  readme.md
.github/workflows/: autotests.yml  docker-publish.yml
appeals/: __main__.py
appeals/config/: config.py  logging_config.py
appeals/core/: common.py  init.py  routers.py  schemas.py
appeals/db/: conversion.py  db.py  models.py  ping.py
appeals/funcs/: handlers.py  handlers_conversion.py  handlers_ping.py
appeals/tests/: run.py  test_conversions.py  test_ping.py
